package com.game.proto;

option java_package = "com.game.pb";
option java_outer_classname = "PlayerMsgProto";

message LoginMsgCS //client to Server           step 1这个要整个RSA加密
{
	required int32 userID = 1; //account name
	required string password = 2; // nickname
	optional int32 channel = 3;		// 渠道号
}

message LoginMsgSC //result from server  step1
{
	required int32 status = 1;
	required string message = 2;
	optional PlayerInfoPB playerInfos = 3;
}

message PlayerInfoPB 					// playerInfo
{
	required int32 userID = 1;						// 用户ID
	required string nickName = 2;					// 昵称
	required string head = 3;						// 用户头像
	required string weChat = 4;						// 微信
	required string phone = 5;						// 手机号
	required int64 nickChangeDate = 6;				// 上次修改昵称时间
	required string unionID = 7;					// unionID
	required int64 registerDate = 8;				// 注册时间

}

message UpdatePlayerInfoPB 				//	playerInfo
{
	required int32 userID = 1;						// 用户ID
	required string nickName = 2;					// 昵称
	required string head = 3;						// 用户头像
	required string weChat = 4;						// 微信
	required string phone = 5;						// 手机号
	required int64 nickChangeDate = 6;				// 上次修改昵称时间
	required string unionID = 7;					// unionID
	required int64 registerDate = 8;				// 注册时间
}
